--- a/Q1.tex
+++ b/Q1.tex
@@ -50,5 +50,9 @@ If at time $t$, $I_1(t) = I_{1_0} e^{-n\gamma t}$ individuals are in $I_1$, then
 
 So the mean time spent in $I_1$ is $\frac{1}{\gamma n}$ Since the removal rate for every infective compartment is the same, the average person should spend the same amount of time in each compartment. Thus, the total infectious period is $n \frac{1}{\gamma n} = \frac{1}{\gamma}$, which is unchanged from the standard SIR model with one infectious compartment.
 
+\subsection*{Part b}
+
+$\R_0$ captures the speed of infectious disease spread, which the linear chain trick does not change, when applied to a model. By expanding $I$ into $n$ sub compartments, but forcing people to move between the compartments at $n$ times the normal rate, the extra compartments do not change the speed of disease spread in the model. In addition, since the sum of the infectious compartments $\sum_1^n{I_i}$ is the same as $I$ in the standard SIR model, the rate of new infections is identical in both models, which means $\R_0$ should be too.
+
 \end{document}
 
